# forge-template

./: .gitignore  Cargo.toml  Makefile  README.md  remappings.txt
components/: Cargo.toml
components/eth-trigger-echo/: Cargo.toml
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/bindings/: Cargo.toml
crates/bindings/src/: addressupgradeable.rs  checkpointsupgradeable.rs  ecdsastakeregistry.rs  ecdsaupgradeable.rs  ilayerservicemanager.rs  ilayertrigger.rs  lib.rs  mathupgradeable.rs  mockerc20.rs  mockerc721.rs  safecastupgradeable.rs  signaturecheckerupgradeable.rs  strings.rs  stringsupgradeable.rs  wavsservicemanager.rs  wavstrigger.rs
script/: WavsServiceManager.s.sol
src/: WavsServiceManager.sol
