[workspace]
members = [
  "eth-trigger-echo",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.2.0-rc1"
authors = ["Lay3r Labs Team"]
rust-version = "1.80.0"
repository = "https://github.com/Lay3rLabs/wasmatic"

[workspace.dependencies]
serde = { version = "1.0.211", features = ["derive"] }
serde_json = "1.0.127"
# anyhow = "1.0.90"
wit-bindgen-rt = { version = "0.32.0", features = ["bitflags"] }
# alloy-rlp = {version = "0.3.10", features = ["derive"]}
# alloy-primitives = "0.8.15"
# alloy-sol-macro = "0.8.15"
# alloy-sol-types = "0.8.15"
# layer-wasi = { git = "https://github.com/Lay3rLabs/avs-toolkit", tag = "v0.2.1" }
# layer-climb-proto = { git = "https://github.com/Lay3rLabs/climb", tag = "v0.3.0" }
# layer-climb-address = { git = "https://github.com/Lay3rLabs/climb", tag = "v0.3.0" }
# layer-climb-config = { git = "https://github.com/Lay3rLabs/climb", tag = "v0.3.0" }
# tendermint-rpc = "0.40.1"
# tendermint = { version = "0.40.1", default-features = false}
# wstd = "0.4.0"

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true
